--- a/profile/src/scss/profile/_profile-general.scss
+++ b/profile/src/scss/profile/_profile-general.scss
@@ -21,6 +21,8 @@
 
 .profile:not(.is-preview) .profile-section {
   .ui-component__title {
+    text-align: left;
+
     &.is-editable {
       display: inline-block;
       padding-right: 2em;
